Added GraphQL transmute jar Refactored Crucible